<resources>
    <string name="app_name">WorkoutTracker </string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="WeightPounds">Weight (Pounds)</string>
    <string name="workoutNow">Workout Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Please_select_a_period">"Please select a period "</string>
    <array name="option">
        <item>Last 7 days</item>
        <item>This Month</item>
        <item>This Year</item>
    </array>
</resources>