<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginAndRegisterAcitivties.RegisterPageActivity">

    <TextView
        android:id="@+id/txtview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_username"
        app:layout_constraintStart_toStartOf="@+id/editText_username"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_weight" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtview_WeightPounds"
        app:layout_constraintStart_toStartOf="@+id/txtview_WeightPounds"
        app:layout_constraintTop_toBottomOf="@+id/txtview_username" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtview_username"
        app:layout_constraintStart_toStartOf="@+id/txtview_username"
        app:layout_constraintTop_toBottomOf="@+id/txtview_password" />

    <TextView
        android:id="@+id/txtview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <TextView
        android:id="@+id/txtview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_email"
        app:layout_constraintStart_toStartOf="@+id/editText_email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtview_WeightPounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WeightPounds"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_weight"
        app:layout_constraintStart_toStartOf="@+id/editText_weight"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />

    <EditText
        android:id="@+id/editText_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_WeightPounds" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtview_password"
        app:layout_constraintStart_toStartOf="@+id/txtview_password"
        app:layout_constraintTop_toBottomOf="@+id/txtview_email" />

</androidx.constraintlayout.widget.ConstraintLayout>