<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginAndRegisterAcitivties.LoginOrRegisterActivity">

    <Button
        android:id="@+id/btn_login_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickLogin"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_LOGO" />

    <Button
        android:id="@+id/btn_register_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ClickRegister"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_main" />

    <ImageView
        android:id="@+id/imageView_LOGO"
        android:layout_width="291dp"
        android:layout_height="363dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:srcCompat="@drawable/workout" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_LOGO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>