<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginAndRegisterAcitivties.LoginPageActivity">

    <TextView
        android:id="@+id/txtview_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_email2"
        app:layout_constraintStart_toStartOf="@+id/editText_email2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtview_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_password2"
        app:layout_constraintStart_toStartOf="@+id/editText_password2"
        app:layout_constraintTop_toBottomOf="@+id/editText_email2" />

    <EditText
        android:id="@+id/editText_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_password2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password2" />

    <EditText
        android:id="@+id/editText_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtview_password2"
        app:layout_constraintStart_toStartOf="@+id/txtview_password2"
        app:layout_constraintTop_toBottomOf="@+id/txtview_email2" />
</androidx.constraintlayout.widget.ConstraintLayout>